--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# AER Specific ignores
+studies/*/modeling/results
+studies/*/modeling/scripts
+
+
 # Python ignores, from https://github.com/github/gitignore/blob/main/Python.gitignore
 # Byte-compiled / optimized / DLL files
 __pycache__/
