feat: add stubs for automated documentation (not yet working)

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,9 @@ tinkerforge==2.1.25
 tk
 torch==1.9.0
 torchvision==0.10.0
+mkdocs-material
+mkdocstrings
+mkdocs_gen_files
+mkdocs-literate-nav
+mkdocs-section-index
 
