--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # AER Specific ignores
 examples/studies/*/modeling/results
 examples/studies/*/modeling/scripts
-
+docs/reference
 
 # Python ignores, from https://github.com/github/gitignore/blob/main/Python.gitignore
 # Byte-compiled / optimized / DLL files
