feat: add flake8 to pre-commits

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,12 @@ repos:
     hooks:
       - id: isort
         args: ["--profile", "black"]
-
+  - repo: https://gitlab.com/pycqa/flake8
+    rev: 3.9.2
+    hooks:
+      - id: flake8
+        args:
+        - "--max-line-length=100"
+        - "--extend-ignore=E203"
 default_language_version:
   python: python3
