--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,5 +15,10 @@ repos:
         args:
         - "--max-line-length=100"
         - "--extend-ignore=E203"
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: "v0.960"  # 2020.10.21
+    hooks:
+      - id: mypy
+        additional_dependencies: [types-requests]
 default_language_version:
   python: python3
