feat: replace requirements.txt with pyproject.toml and poetry.lock
Include relevant documentation

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 .idea/
 .vscode/
 
+# Python Environment
+.python-version
+.venv
+
 # Python ignores, from https://github.com/github/gitignore/blob/main/Python.gitignore
 # Byte-compiled / optimized / DLL files
 __pycache__/
