--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-# IDE-directories
-.idea/
-.vscode/
+# PyCharm ignores are handled by the .idea/.gitignore file
+# VSCode ignores are handled by the .vscode/.gitignore file
 
 # Python Environment
 .python-version
