chore: add .DS_Store to .gitignore
This is automatically ignored by PyCharm, but not by VSCode.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 # Dependencies
 Brewfile.lock.json
 
+# General ignores for macOS
+.DS_Store
+
 # Python ignores, from https://github.com/github/gitignore/blob/main/Python.gitignore
 # Byte-compiled / optimized / DLL files
 __pycache__/
