--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,11 +3,10 @@ repos:
     rev: 22.3.0
     hooks:
       - id: black
-  - repo: https://github.com/timothycrosley/isort
+  - repo: https://github.com/pycqa/isort
     rev: 5.10.1
     hooks:
       - id: isort
-        args: ["--profile", "black"]
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.9.2
     hooks:
