--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,6 @@ scipy = "^1.8.1"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
