docs: add automated documentation with material for mkdocs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,12 @@ torchvision = "^0.12.0"
 scipy = "^1.8.1"
 
 [tool.poetry.dev-dependencies]
+mkdocs-material = "^8.3.8"
+mkdocs-gen-files = "^0.3.4"
+mkdocs-literate-nav = "^0.4.1"
+mkdocs-section-index = "^0.3.4"
+mkdocstrings-python = "^0.7.1"
+
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
