feat: added architecture updates (rudimentarily working)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ tinkerforge = '~2.1.25'
 torch = "^1.11.0"
 torchvision = "^0.12.0"
 scipy = "^1.8.1"
+scikit-learn = "^1.1.1"
 
 [tool.poetry.dev-dependencies]
 
@@ -26,3 +27,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.isort]
 profile = "black"
+
