refactor: move top level studies directory into example/

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # AER-specific files
-studies/**/modeling
+example/studies/**/modeling
 
 # PyCharm ignores are handled by the .idea/.gitignore file
 # VSCode ignores are handled by the .vscode/.gitignore file
