--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ tinkerforge = '~2.1.25'
 torch = "^1.11.0"
 torchvision = "^0.12.0"
 scipy = "^1.8.1"
+jupyter = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 mkdocs-material = "^8.3.8"
