--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ torch = "^1.11.0"
 torchvision = "^0.12.0"
 scipy = "^1.8.1"
 scikit-learn = "^1.1.1"
+tqdm = "^4.64.0"
 
 [tool.poetry.dev-dependencies]
 mkdocs-material = "^8.3.8"
