--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,7 @@ repos:
         args:
         - "--max-line-length=100"
         - "--extend-ignore=E203"
+        - "--per-file-ignores=__init__.py:F401"
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: "v0.960"  # 2020.10.21
     hooks:
