--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = '>=3.8.13,<3.11'
 numpy = "^1.18"
 imageio = '~2.9.0'
-matplotlib = '~3.2.1'
+matplotlib = '^3.2.1'
 pandas = '~1.4.2'
 graphviz = '~0.14.1'
 seaborn = '~0.11.1'
