--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,11 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.8.13,<3.11"
 numpy = "^1.18"
-imageio = "~2.9.0"
+imageio = "^2.9.0"
 matplotlib = "^3.2.1"
-pandas = "~1.4.2"
-graphviz = "~0.14.1"
-seaborn = "~0.11.1"
+pandas = "^1.4.2"
+graphviz = "^0.14.1"
+seaborn = "^0.11.1"
 tinkerforge = {version = "~2.1.25", optional=true}
 torch = "^1.11.0"
 scipy = "^1.8.1"
