--- a/conda/autora/meta.yaml
+++ b/conda/autora/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "autora" %}
-{% set version = "1.0.0a1" %}
+{% set version = "1.0.0a3" %}
 
 package:
   name: "{{ name|lower }}"
@@ -20,10 +20,10 @@ requirements:
     - poetry
     - graphviz
     - python-graphviz >=0.14.1,<0.15.0
-    - imageio >=2.9.0,<2.10.0
+    - imageio >=2.9.0
     - matplotlib >=3.2.1,<4.0.0
     - numpy >=1.18,<2.0
-    - pandas >=1.4.2,<1.5.0
+    - pandas >=1.4.2,<2.0.0
     - scikit-learn >=1.1.1,<2.0.0
     - scipy >=1.7.1,<2.0.0
     - seaborn >=0.11.1,<0.12.0
@@ -33,10 +33,10 @@ requirements:
     - python
     - graphviz
     - python-graphviz >=0.14.1,<0.15.0
-    - imageio >=2.9.0,<2.10.0
+    - imageio >=2.9.0,<3.0.0
     - matplotlib >=3.2.1,<4.0.0
     - numpy >=1.18,<2.0
-    - pandas >=1.4.2,<1.5.0
+    - pandas >=1.4.2,<2.0.0
     - scikit-learn >=1.1.1,<2.0.0
     - scipy >=1.7.1,<2.0.0
     - seaborn >=0.11.1,<0.12.0
