updated DARTS mkdocs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,7 +28,14 @@ extra_javascript:
 
 
 nav:
-- index.md
+- Introduction: 'index.md'
+- Theorists:
+  - Overview: 'theorist/overview.md'
+  - DARTS:
+      - Introduction: 'theorist/darts/introduction.md'
+      - How it works: 'theorist/darts/how_it_works.md'
+      - Search space: 'theorist/darts/search_space.md'
+      - Example: 'theorist/darts/example.md'
 # rest of the navigation...
 # defer to gen-files + literate-nav
 - Code Reference: reference/  #
