add automated documentation building using CI

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -3,16 +3,14 @@ on:
   push:
     branches:
       - main
+      - feat/auto-documentation
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Install poetry
-        run: pipx install poetry
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
         with:
-          python-version: '3.9'
-          cache: 'poetry'
-      - run: poetry install
-      - run: poetry run mkdocs gh-deploy --force
+          python-version: 3.x
+      - run: pip install mkdocs-material mkdocs-gen-files mkdocs-literate-nav mkdocs-section-index mkdocstrings-python
+      - run: mkdocs gh-deploy --force
