--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,9 @@ repos:
     rev: 5.10.1
     hooks:
       - id: isort
+        args:
+        - "--profile=black"
+        - "--filter-files"
   - repo: https://gitlab.com/pycqa/flake8
     rev: 5.0.4
     hooks:
