--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ sympy = "^1.10.1"
 sklearn = "^0.0"
 ipywidgets = "^7.7.1"
 ipython = "^8.4.0"
+pytest = "^7.1.3"
 
 [tool.poetry.dev-dependencies]
 jupyter = "^1.0.0"
