--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ scipy = "^1.7.1"
 scikit-learn = "^1.1.1"
 tqdm = "^4.64.0"
 python-statemachine = "^0.8.0"
+transitions = "^0.9.0"
 
 [tool.poetry.dev-dependencies]
 mkdocs-material = "^8.3.8"
