--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ repository = "https://github.com/AutoResearch/autora"
 documentation = "https://autoresearch.github.io/autora/"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.12"
 numpy = "^1.18"
 imageio = "^2.9.0"
 matplotlib = "^3.2.1"
@@ -24,6 +24,7 @@ torch = "^1.11.0"
 scipy = "^1.7.1"
 scikit-learn = "^1.1.1"
 tqdm = "^4.64.0"
+jupyter = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 mkdocs-material = "^8.3.8"
