--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ scikit-learn = "^1.1.1"
 tqdm = "^4.64.0"
 python-statemachine = "^0.8.0"
 transitions = "^0.9.0"
+jupyter = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 mkdocs-material = "^8.3.8"
