use poetry flake8

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --max-line-length=100 --extend-ignore=E203 --per-file-ignores=__init__.py:F401
+        poetry run flake8 . --max-line-length=100 --extend-ignore=E203 --per-file-ignores=__init__.py:F401
     - name: Test with pytest
       run: |
         poetry run pytest
