--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,10 +26,13 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      uses: abatilo/actions-poetry@v2
-      with:
-        poetry-version: ${{ matrix.poetry-version }}
+    - name: Install poetry
+      run: |
+        pip install poetry==${{ matrix.poetry-version }}
+    - name Install dependencies:
+      run: |
+        poetry install --with ci 
+
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
