--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,6 @@ jobs:
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
         os: [ubuntu-latest, macos-latest, windows-latest]
-        poetry-version: ["1.2.1"]
 
     steps:
     - uses: actions/checkout@v3
@@ -28,7 +27,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install poetry
       run: |
-        pip install poetry==${{ matrix.poetry-version }}
+        pip install poetry
     - name: Install dependencies
       run: |
         poetry install --with ci 
