--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ sklearn = "^0.0"
 ipywidgets = "^7.7.1"
 ipython = "^8.4.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
 pytest = "^7.1.3"
 
