--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ ipython = "^8.4.0"
 jupyter = "^1.0.0"
 pytest = "^7.1.3"
 
+[tool.poetry.group.ci.dependencies]
+flake8 = "^5.0.4"
+pytest = "^7.1.2"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
