--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,7 @@ repos:
     rev: 5.0.4
     hooks:
       - id: flake8
+        exclude: ^\.py$
         args:
         - "--max-line-length=100"
         - "--extend-ignore=E203"
