--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,15 +10,14 @@ repos:
         args:
         - "--profile=black"
         - "--filter-files"
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 5.0.4
-    hooks:
-      - id: flake8
-        exclude: ^\.py$
-        args:
-        - "--max-line-length=100"
-        - "--extend-ignore=E203"
-        - "--per-file-ignores=__init__.py:F401"
+#  - repo: https://gitlab.com/pycqa/flake8
+#    rev: 5.0.4
+#    hooks:
+#      - id: flake8
+#        args:
+#        - "--max-line-length=100"
+#        - "--extend-ignore=E203"
+#        - "--per-file-ignores=__init__.py:F401"
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: "v0.971"
     hooks:
