--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ mkdocstrings-python = "^0.7.1"
 [tool.poetry.group.ci.dependencies]
 flake8 = "^5.0.4"
 pytest = "^7.1.2"
+pre-commit = "^2.20.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
