--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,11 +30,10 @@ jobs:
         pip install poetry
     - name: Install dependencies
       run: |
-        poetry install --with ci 
-
+        poetry install --with ci
+    - name: Run pre-commit hooks
+      run: |
+        poetry run pre-commit run --all-files --show-diff-on-failure --color=always
     - name: Test with pytest
       run: |
         poetry run pytest
-    - name: Run pre-commit hooks
-      run: |
-        pre-commit run --all-files --show-diff-on-failure --color=always
