--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,8 +32,13 @@ jobs:
       run: |
         poetry install --with ci
     - name: Run pre-commit hooks
-      run: |
-        poetry run pre-commit run --all-files --show-diff-on-failure --color=always
+      using: composite
+      steps:
+      - uses: actions/cache@v3
+        with:
+          path: ~/.cache/pre-commit
+          key: pre-commit-3|${{ env.pythonLocation }}|${{ hashFiles('.pre-commit-config.yaml') }}
+      - run: poetry run pre-commit run --all-files --show-diff-on-failure --color=always
     - name: Test with pytest
       run: |
         poetry run pytest
