--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,16 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Cache Poetry
+      uses: actions/cache@v2
+      with:
+        path: ~/.cache/pypoetry
+        key: poetry-cache|${{ runner.os }}|${{ matrix.python-version }}
+    - name: Cache Packages
+      uses: actions/cache@v2
+      with:
+        path: ~/.local
+        key: poetry-packages|${{ env.pythonLocation }}|${{ runner.os }}|${{ hashFiles('**/poetry.lock') }}
     - name: Install poetry
       run: |
         pip install poetry
