--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ["3.8"] #, "3.9", "3.10"]
+        os: [ubuntu-latest, macos-latest] # windows-latest
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
@@ -27,7 +27,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ~/.cache/pypoetry
-        key: poetry-cache|${{ runner.os }}|${{ matrix.python-version }}
+        key: poetry-cache|${{ env.pythonLocation }}|${{ runner.os }}
     - name: Cache Packages
       uses: actions/cache@v2
       with:
@@ -43,7 +43,7 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ~/.cache/pre-commit
-        key: pre-commit-3|${{ env.pythonLocation }}|${{ matrix.os }}|${{ runner.os }}|${{ matrix.python-version }}|${{ hashFiles('.pre-commit-config.yaml') }}
+        key: pre-commit-3|${{ env.pythonLocation }}|${{ runner.os }}|${{ hashFiles('.pre-commit-config.yaml') }}
     - name: Run pre-commit hooks
       run: |
         poetry run pre-commit run --all-files --show-diff-on-failure --color=always
