--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ pandas = "^1.4.2"
 seaborn = "^0.11.2"
 scikit-learn = "^1.1.1"
 tinkerforge = {version = "^2.1.25", optional=true}
-torch = "^1.11.0"
+torch = "1.12.1"
 tqdm = "^4.64.0"
 sympy = "^1.10.1"
 
