--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,10 +19,10 @@ matplotlib = "^3.2.1"
 pandas = "^1.4.2"
 graphviz = "^0.14.1"
 seaborn = ">=0.11.1,<0.13.0"
-tinkerforge = {version = "^2.1.25", optional=true}
-torch = "^1.11.0"
 scipy = "^1.7.1"
 scikit-learn = "^1.1.1"
+tinkerforge = {version = "^2.1.25", optional=true}
+torch = "1.12.1"
 tqdm = "^4.64.0"
 
 [tool.poetry.extras]
