--- a/conda/autora/meta.yaml
+++ b/conda/autora/meta.yaml
@@ -19,29 +19,31 @@ requirements:
     - pip
     - poetry
     - graphviz
-    - python-graphviz >=0.14.1,<0.15.0
+    - python-graphviz >=0.14.1,<0.21.0
     - imageio >=2.9.0
     - matplotlib >=3.2.1,<4.0.0
-    - numpy >=1.18,<2.0
+    - numpy >=1.23.1,<2.0
     - pandas >=1.4.2,<2.0.0
     - scikit-learn >=1.1.1,<2.0.0
-    - scipy >=1.7.1,<2.0.0
-    - seaborn >=0.11.1,<0.12.0
-    - pytorch >=1.11.0,<2.0.0
+    - scipy >=1.9.3,<2.0.0
+    - seaborn >=0.11.1,<0.13.0
+    - pytorch >=1.12.1,<2.0.0
     - tqdm >=4.64.0,<5.0.0
+    - sympy >=1.10.1,<2.0.0
   run:
     - python
     - graphviz
-    - python-graphviz >=0.14.1,<0.15.0
-    - imageio >=2.9.0,<3.0.0
+    - python-graphviz >=0.14.1,<0.21.0
+    - imageio >=2.9.0
     - matplotlib >=3.2.1,<4.0.0
-    - numpy >=1.18,<2.0
+    - numpy >=1.23.1,<2.0
     - pandas >=1.4.2,<2.0.0
     - scikit-learn >=1.1.1,<2.0.0
-    - scipy >=1.7.1,<2.0.0
-    - seaborn >=0.11.1,<0.12.0
-    - pytorch >=1.11.0,<2.0.0
+    - scipy >=1.9.3,<2.0.0
+    - seaborn >=0.11.1,<0.13.0
+    - pytorch >=1.12.1,<2.0.0
     - tqdm >=4.64.0,<5.0.0
+    - sympy >=1.10.1,<2.0.0
 
 test:
   imports:
