chore: update home url

--- a/conda/autora/meta.yaml
+++ b/conda/autora/meta.yaml
@@ -57,7 +57,7 @@ test:
     - autora.variable
 
 about:
-  home: https://musslick.github.io/AER_website/Resources.html
+  home: https://empiricalresearch.ai
   license: UNKNOWN
   license_family: OTHER
   license_file: LICENSE.md
