fix: update meta.yaml to use packaged version from pypi as base version for building conda recipe

--- a/conda/autora/meta.yaml
+++ b/conda/autora/meta.yaml
@@ -6,37 +6,36 @@ package:
   version: "{{ version }}"
 
 source:
-  path: ../../
+  url: "https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz"
+  sha256: 3f0b48f4d91d95a135ec57258afde849353dd0783002845738c6561ef381847e
 
 build:
   number: 0
-  noarch: python
   script: "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
   host:
     - python
     - pip
-    - poetry
     - graphviz
-    - python-graphviz >=0.14.1,<0.21.0
-    - imageio >=2.9.0
+    - imageio >=2.9.0,<3.0.0
     - matplotlib >=3.2.1,<4.0.0
-    - numpy >=1.23.1,<2.0
+    - numpy >=1.23.1,<2.0.0
     - pandas >=1.4.2,<2.0.0
+    - python-graphviz >=0.14.1,<0.21.0
+    - pytorch >=1.12.1,<2.0.0
     - scikit-learn >=1.1.1,<2.0.0
     - scipy >=1.9.3,<2.0.0
     - seaborn >=0.11.1,<0.13.0
-    - pytorch >=1.12.1,<2.0.0
-    - tqdm >=4.64.0,<5.0.0
     - sympy >=1.10.1,<2.0.0
+    - tqdm >=4.64.0,<5.0.0
   run:
     - python
     - graphviz
     - python-graphviz >=0.14.1,<0.21.0
-    - imageio >=2.9.0
+    - imageio >=2.9.0,<3.0.0
     - matplotlib >=3.2.1,<4.0.0
-    - numpy >=1.23.1,<2.0
+    - numpy >=1.23.1,<2.0.0
     - pandas >=1.4.2,<2.0.0
     - scikit-learn >=1.1.1,<2.0.0
     - scipy >=1.9.3,<2.0.0
@@ -52,12 +51,12 @@ test:
     - autora.skl.darts
     - autora.skl.bms
     - autora.theorist
-    - autora.theorist.darts
     - autora.theorist.bms
+    - autora.theorist.darts
     - autora.variable
 
 about:
-  home: https://musslick.github.io/AER_website/Research.html
+  home: "https://musslick.github.io/AER_website/Research.html"
   license: UNKNOWN
   license_family: OTHER
   license_file: LICENSE.md
