--- a/conda/autora/meta.yaml
+++ b/conda/autora/meta.yaml
@@ -6,8 +6,7 @@ package:
   version: "{{ version }}"
 
 source:
-  url: "https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz"
-  sha256: 3f0b48f4d91d95a135ec57258afde849353dd0783002845738c6561ef381847e
+  path: "../../"
 
 build:
   number: 0
