--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set pyproject = load_file_data("../pyproject.toml", from_recipe_dir=True) %}
+{% set pyproject = load_file_data("../../pyproject.toml", from_recipe_dir=True) %}
 {% set poetry = pyproject.get('tool', {}).get('poetry') %}
 
 package:
@@ -6,7 +6,7 @@ package:
   version: {{ poetry.get('version') }}
 
 source:
-  path: ../
+  path: ../../
 
 build:
   number: 0
