chore: add pre-commit checks for python 3.8, 3.9 and 3.10

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,5 +23,12 @@ repos:
     hooks:
       - id: mypy
         additional_dependencies: [types-requests]
+        language_version: python3.8
+      - id: mypy
+        additional_dependencies: [ types-requests ]
+        language_version: python3.9
+      - id: mypy
+        additional_dependencies: [ types-requests ]
+        language_version: python3.10
 default_language_version:
   python: python3
