--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,10 +25,11 @@ sympy = "^1.10.1"
 tinkerforge = {version = "^2.1.25", optional=true}
 torch = "1.12.1"
 tqdm = "^4.64.0"
-alipy = "^1.2.5"
+alipy = {version = "^1.2.5", optional=true}
 
 [tool.poetry.extras]
 tinkerforge = ["tinkerforge"]
+experimentalist-uncertainty-sampler = ["alipy"]
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
