--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,8 +1,7 @@
 name: documentation
 on:
-  push:
-    branches:
-      - main
+  release:
+    types: [published]
 jobs:
   deploy:
     runs-on: ubuntu-latest
