--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,9 +31,13 @@ tinkerforge = ["tinkerforge"]
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
-pytest = "^7.2.0"
 ipython = "^8.4.0"
 ipywidgets = "^7.7.1"
+flake8 = "^5.0.4"
+pre-commit = "^2.20.0"
+
+[tool.poetry.group.test.dependencies]
+pytest = "^7.2.0"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs-material = "^8.5.10"
@@ -41,11 +45,6 @@ mkdocs-gen-files = "^0.3.4"
 mkdocs-literate-nav = "^0.4.1"
 mkdocs-section-index = "^0.3.4"
 mkdocstrings-python = "^0.7.1"
-
-[tool.poetry.group.ci.dependencies]
-flake8 = "^5.0.4"
-pytest = "^7.1.2"
-pre-commit = "^2.20.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
