--- a/.github/workflows/pre-commit-hooks.yml
+++ b/.github/workflows/pre-commit-hooks.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         python-version: 3.8
     - run: pip install poetry
-    - run: poetry install pre-commit
+    - run: poetry install --only pre-commit
     - uses: actions/cache@v3
       with:
         path: ~/.cache/pre-commit
