chore: simplify pre-commit-hook action to use poetry caching

--- a/.github/workflows/pre-commit-hooks.yml
+++ b/.github/workflows/pre-commit-hooks.yml
@@ -13,10 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - run: pipx install poetry
     - uses: actions/setup-python@v4
       with:
         python-version: 3.8
-    - run: pip install poetry
+        cache: "poetry"
     - run: poetry install --only pre-commit
     - uses: actions/cache@v3
       with:
