--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,13 @@ authors = ["listar2000 <35262801+listar2000@users.noreply.github.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.8"
 numpy = "^1.23.4"
 pandas = "^1.5.1"
 scipy = "^1.9.3"
-sklearn = "^0.0"
 pytest = "^7.1.3"
 matplotlib = "^3.6.1"
+scikit-learn = "^1.2.0"
 
 
 [build-system]
