--- a/.github/workflows/py.test.yml
+++ b/.github/workflows/py.test.yml
@@ -24,5 +24,5 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         cache: "poetry"
-    - run: poetry install --with test
+    - run: poetry install
     - run: poetry run pytest
