test: update paths for testing conda

--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -53,7 +53,7 @@ test:
     - autora.experimentalist.sampler
     - autora.experimentalist.filter
     - autora.experimentalist.pipeline
-    - autora.experimentalist.pool
+    - autora.experimentalist.pooler
     - autora.skl
     - autora.skl.darts
     - autora.skl.bms
