--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ sympy = "^1.10.1"
 tinkerforge = {version = "^2.1.25", optional=true}
 torch = "1.12.1"
 tqdm = "^4.64.0"
+Powerset = "^0.0.1"
 
 [tool.poetry.extras]
 tinkerforge = ["tinkerforge"]
