--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -67,7 +67,7 @@ about:
   license: UNKNOWN
   license_family: OTHER
   license_file: LICENSE.md
-  summary: "Autonomous Research Assistant (AutoRA) is a framework for implementing machine learning tools which autonomously and iteratively generate 1) new theories to describe real-world data, and 2) experiments to invalidate those theories and seed a new cycle of theory-making. The experiments will be run online via crowd-sourcing platforms (MTurk, Prolific)."
+  summary: "Autonomous Research Assistant (AutoRA) is a framework for implementing machine learning tools which autonomously and iteratively generate 1) new theories to describe real-world data_closed_loop, and 2) experiments to invalidate those theories and seed a new cycle of theory-making. The experiments will be run online via crowd-sourcing platforms (MTurk, Prolific)."
   doc_url: https://autoresearch.github.io/autora/
   dev_url: https://github.com/AutoResearch/autora
 
