--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -20,9 +20,9 @@ jobs:
       - name: Install dependencies
         run: poetry install
 
-      - run: poetry source add test-pypi https://test.pypi.org/legacy/
+      - run: poetry config repositories.testpypi https://test.pypi.org/legacy/
       
       - name: Build & Publish
-        run: poetry publish --repository=test-pypi --build 
+        run: poetry publish --repository=testpypi --build 
         env:
           POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
