--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -21,10 +21,11 @@ jobs:
       - name: Install dependencies
         run: poetry install
   
-  deploy:
-    runs-on: ubuntu-latest
-    needs: setup-environment
-    steps:
+      - run: poetry version ${{ github.event.release.tag_name }}
+      
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "chore: bump version to ${{ github.event.release.tag_name }}"
 
       - run: poetry config repositories.testpypi https://test.pypi.org/legacy/
       
