--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,8 +49,11 @@ mkdocs-section-index = "^0.3.4"
 mkdocstrings-python = "^0.7.1"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
+build-backend = "poetry_dynamic_versioning.backend"
+
+[tool.poetry-dynamic-versioning]
+enable = true
 
 [tool.isort]
 profile = "black"
