--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/checkout@v3
       
       - run: pipx install poetry
+      
+      - run: poetry self add "poetry-dynamic-versioning[plugin]"
     
       - uses: actions/setup-python@v4
         with:
