--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -5,19 +5,24 @@ on:
     types: [ published ]
 
 jobs:
-  build-linux:
+  build-conda:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
-
+    
     - name: Bump version number
-      run: sed -i 's/{% set version = "0.0.0" %}/{% set version = "${{ github.event.release.tag_name }}" %}/g' ./conda/recipe/meta.yaml
+      uses: nguyenvanuyn96/str-find-and-replace-action@0.0.5
+      with:
+        include: conda/recipe/meta.yaml
+        find: '{% set version = "0.0.0" %}'
+        replace: '{% set version = "${{ github.event.release.tag_name }}" %}'
 
     - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4
       with:
         python-version: '3.10'
+        
     - name: Add conda to system path
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
