--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -12,11 +12,10 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Bump version number
-      uses: nguyenvanuyn96/str-find-and-replace-action@0.0.5
-      with:
-        include: conda/recipe/meta.yaml
-        find: '{% set version = "0.0.0" %}'
-        replace: '{% set version = "${{ github.event.release.tag_name }}" %}'
+      run: |
+        REF_NAME_WITHOUT_V=${GITHUB_REF_NAME#v}
+        sed -i.bak 's/{% set version = "0.0.0" %}/{% set version = "${REF_NAME_WITHOUT_V}" %}/' conda/recipe/meta.yaml
+        cat conda/recipe/meta.yaml
 
     - name: Set up Python 3.10
       uses: actions/setup-python@v4
