chore: downgrade python

--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -16,10 +16,10 @@ jobs:
         REF_NAME_WITHOUT_V=${GITHUB_REF_NAME#v}
         sed -i.bak "s/{% set version = \"0.0.0\" %}/{% set version = \"${REF_NAME_WITHOUT_V}\" %}/" conda/autora/meta.yaml
 
-    - name: Set up Python 3.10
+    - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: '3.9'
         
     - name: Add conda to system path
       run: |
