--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -27,7 +27,9 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
         
     - name: Install dependencies
-      run: conda install conda-build
+      run: | 
+        conda install conda-build
+        conda install conda-verify
     
     - name: Build
       run: |
