--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -30,6 +30,7 @@ jobs:
       run: | 
         conda install conda-build
         conda install conda-verify
+        conda install anaconda-client
     
     - name: Build
       run: |
