--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -18,10 +18,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
-    - name: Bump version number
+    - name: Replace version number in meta.yaml with release number
       run: |
         REF_NAME_WITHOUT_V=${GITHUB_REF_NAME#v}
-        sed -i.bak "s/{% set version = \"0.0.0\" %}/{% set version = \"${REF_NAME_WITHOUT_V}\" %}/" conda/autora/meta.yaml
+        sed -i.bak "s/^{% set version =.*$/{% set version = \"${REF_NAME_WITHOUT_V}\" %}/" conda/autora/meta.yaml
 
     - name: Set up Python
       uses: actions/setup-python@v4
