--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -28,9 +28,7 @@ jobs:
         run: poetry build
 
       - name: Setup PyPI Repository
-        run: |
-          poetry config repositories.testpypi https://test.pypi.org/legacy/
-          poetry config pypi-token.testpypi ${{ secrets.PYPI_TOKEN }}
+        run: poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
       
       - name: Publish
-        run: poetry publish --repository=testpypi
+        run: poetry publish
