--- a/.github/workflows/test-pre-commit-hooks.yml
+++ b/.github/workflows/test-pre-commit-hooks.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Run pre-commit-hooks
+name: Test pre-commit-hooks
 
 on:
   pull_request:
