--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,5 +24,6 @@ repos:
     hooks:
       - id: mypy
         additional_dependencies: [types-requests]
+        language_version: python3.8
 default_language_version:
   python: python3
