--- a/conda/autora/meta.yaml
+++ b/conda/autora/meta.yaml
@@ -48,9 +48,11 @@ test:
     - autora.skl
     - autora.skl.darts
     - autora.skl.bms
+    - autora.skl.bsr
     - autora.theorist
-    - autora.theorist.bms
     - autora.theorist.darts
+    - autora.theorist.bms
+    - autora.theorist.bsr
     - autora.variable
 
 about:
