test: add doctest for autora/cycle to github runner

--- a/.github/workflows/test-pytest.yml
+++ b/.github/workflows/test-pytest.yml
@@ -25,4 +25,6 @@ jobs:
         python-version: ${{ matrix.python-version }}
         cache: "poetry"
     - run: poetry install
-    - run: poetry run pytest
+    - run: |
+        poetry run pytest
+        poetry run pytest --doctest-modules autora/cycle
