test: add doctest-modules in CI

--- a/.github/workflows/test-pytest.yml
+++ b/.github/workflows/test-pytest.yml
@@ -26,3 +26,5 @@ jobs:
         cache: "poetry"
     - run: poetry install
     - run: poetry run pytest
+    - run: poetry run pytest --doctest-modules autora/controller
+
