fix: Added line to change poetry config for installer.modern-installation to false.
This correct an issue with and invalid debugpy wheel with Poetry v1.4.1 modern installer.

--- a/.github/workflows/test-pytest.yml
+++ b/.github/workflows/test-pytest.yml
@@ -24,5 +24,6 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         cache: "poetry"
+    - run: poetry config installer.modern-installation false
     - run: poetry install
     - run: poetry run pytest
