--- a/.github/workflows/test-pytest.yml
+++ b/.github/workflows/test-pytest.yml
@@ -24,5 +24,5 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         cache: "poetry"
-    - run: poetry install
+    - run: poetry install --only main,test
     - run: poetry run pytest
