--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ documentation = "https://autoresearch.github.io/autora/"
 
 [tool.poetry.dependencies]
 python = ">=3.8.10,<3.11"
-numpy = "^1.23.1"
+numpy = ">=1.22.1"
 scipy = "^1.9.3"
 imageio = "^2.9.0"
 matplotlib = "^3.2.1"
