docs: add jupyter notebook integration in material theme

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,9 @@ plugins:
         python:
           import:
             - https://scikit-learn.org/stable/objects.inv
+  - mkdocs-jupyter:
+      include_source: true
+      execute: false
 
 
 markdown_extensions:
