--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "autora-darts"
-version = "3.0.0-a2"
+version = "0.0.0"
 description = ""
 authors = [
     "Sebastian Musslick <sebastian_musslick@brown.edu>",
