--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,8 +42,13 @@ plugins:
       include_source: true
       execute: false
       ignore_h1_titles: True
-  - mkdocs-multirepo-plugin:
-
+  - multirepo:
+      # (optional) tells multirepo to clean up the temporary directory after site is built.
+      cleanup: false
+      # if set the docs directory will not be removed when importing docs.
+      # When using this with a nav section in an imported repo you must keep the
+      # docs directory in the path (e.g., docs/path/to/file.md).
+      keep_docs_dir: true
 
 markdown_extensions:
   - pymdownx.arithmatex:
