--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ torch = "2.0.0"
 graphviz = ">=0.14.1,<0.21.0"
 tqdm = "^4.64.0"
 
+[tool.poetry.group.dev.dependencies]
+jupyter = "^1.0.0"
+
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.0"
 
